--- a/src/App.scss
+++ b/src/App.scss
@@ -10,7 +10,7 @@
   align-items: center
 }
   .first-switch {
-      background-color: teal;
+    background-color: teal;
     margin: 50px;
     display: flex;
     align-items: center;
@@ -219,4 +219,63 @@
         opacity: 0;
       }
     }
+  }
+
+  // svg
+
+  .svg-wrapper {
+    position: absolute;
+    width: 100px;
+    height: 50px;
+  }
+  .shape {
+    stroke-dasharray: 0 500;
+    stroke-dashoffset: -500;
+    stroke-width: 8px;
+    fill: transparent;
+
+    // stroke: #fff;
+    // border-bottom: 5px solid black;
+    // transition: stroke-width 1s, stroke-dashoffset 1s, stroke-dasharray 1s;
+  }
+  .text {
+/*     width: 320px; */
+    // diplay:flex;
+
+    justify-content:center;
+    align-items:center;
+/*     text-align:center; */
+    position: absolute;
+    top:15px;
+    left:40px;
+    font-family: 'Roboto Condensed';
+    font-size: 18px;
+    color: #fff;
+
+  }
+
+  .clickedShape {
+    stroke-width: 2px;
+    stroke-dashoffset: 0;
+    stroke-dasharray: 500;
+    transition: stroke-width 1s, stroke-dashoffset 1s, stroke-dasharray 1s;
+    stroke: #fff;
+    fill: transparent;
+
+
+    // background-color: transparent;
+  }
+  .clickedOffShape{
+    stroke-width: 2px;
+    stroke-dashoffset: 0;
+    stroke-dasharray: 300;
+    transition: stroke-width 1s, stroke-dashoffset 1s, stroke-dasharray 1s;
+    stroke: #fff;
+    fill: transparent;
+    opacity: 0.6;
+
+  }
+
+  .svg {
+    position: absolute;
   }
