write external css

--- a/src/App.scss
+++ b/src/App.scss
@@ -391,3 +391,18 @@
     transition: background-color 0.5s ease-out;
   }
 }
+.secondDefault{
+  opacity: 0.6;
+  stroke: white;
+  stroke-width: 2px;
+  stroke-dashoffset: -720;
+  fill: none;
+
+}
+.thirdDefault{
+  opacity: 0.6;
+  stroke: white;
+  stroke-width: 2px;
+  stroke-dashoffset: -720;
+  fill: none;
+}
